2002-12-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Eliminate *_O_FILES.
	Don't include @RTEMS_BSP@.cfg.
	* sci/Makefile.am: Ditto.
	* score/Makefile.am: Ditto.
	* timer/Makefile.am: Ditto.
	* configure.ac: Apply 2002-11-07 patch (Apparently dropped by CVS).

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-11-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge in include/Makefile.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* score/cpu_asm.c, score/ispsh7045.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* sci/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* score/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.

2001-04-03	Joel Sherrill <joel@OARcorp.com>

	* Per PR94, all rtems/score/CPUtypes.h are named rtems/score/types.h.
	* include/ispsh7045.h, score/ispsh7045.c: Account for name change.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* sci/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* score/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/iosh7045.h: Add SCI0_SMR, SCI1_SMR for sh7032
	compatibility to make simsh happy.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, include/iosh7045.h, include/ispsh7045.h,
	include/sci.h, include/sh7_pfc.h, include/sh7_sci.h, sci/sci.c,